<resources>
    <string name="app_name" translatable="false">EconomizeApp</string>
    <string name="login_name">Login</string>
    <string name="senha_name">Senha</string>
    <string name="email_name">Email</string>
    <string name="cadastro_name">Cadastro</string>
    <string name="esqueceu_name">Esqueceu a Senha?</string>
    <string name="confirmarsenha_name">Confirme a Senha</string>
    <string name="confirmaremail_name">Confirme o email</string>
    <string name="endereco_name">Endereço</string>
    <string name="nome_name">Nome</string>
    <string name="confirmar_name">Confirmar</string>
    <string name="enviar_name">Enviar</string>
    <string name="gasto_name">Gastos em kWh</string>
    <string name="pagamento_name">Quanto foi pago</string>
    <string name="casosemlogin_name">Caso não tenha Login, toque aqui</string>
    <string name="kwhEm10Meses_name">Em 10 meses você vai gastar, em kWh:</string>
    <string name="gastosEm10Meses_name">Em 10 meses você vai gastar:</string>
</resources>