<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">


    <Button
        android:id="@+id/Loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_name"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="586dp" />

    <EditText
        android:id="@+id/Emailtext"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="383dp" />

    <TextView
        android:id="@+id/Emailtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_name"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="461dp" />

    <EditText
        android:id="@+id/Senhatext"
        android:layout_width="298dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="489dp" />

    <TextView
        android:id="@+id/Senhatitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha_name"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="347dp" />

    <TextView
        android:id="@+id/Logotitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="55dp" />

    <TextView
        android:id="@+id/Logintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_name"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="261dp" />

</androidx.constraintlayout.widget.ConstraintLayout>